Enhanced website styling and functionality: improved header design, contact info styling, navigation fixes, and added portfolio-focused nav links

--- a/about.html
+++ b/about.html
@@ -4,7 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Technology Portfolio</title>
+
+    <!-- Primary Meta Tags -->
+    <title>About Vineet Kumar - QE Manager & SDET Architect | 16+ Years Experience</title>
+    <meta name="title" content="About Vineet Kumar - QE Manager & SDET Architect | Test Automation Expert">
+    <meta name="description"
+        content="Learn about Vineet Kumar's 16+ year journey in quality engineering, test automation, and SDET architecture. Expertise in Selenium, Playwright, API testing, CI/CD, and leading high-performing QA teams across finance, healthcare, and e-commerce domains.">
+    <meta name="keywords"
+        content="QE Manager Biography, SDET Expert Profile, Test Automation Leader, Quality Engineering Experience, Automation Framework Architect, CI/CD Expert, Selenium Expert, Playwright Specialist, API Testing Professional">
+    <meta name="author" content="Vineet Kumar">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://vineetkr.com/about.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="profile">
+    <meta property="og:url" content="https://vineetkr.com/about.html">
+    <meta property="og:title" content="About Vineet Kumar - QE Manager & SDET Architect">
+    <meta property="og:description"
+        content="16+ years driving quality innovation in test automation, CI/CD, and quality engineering leadership across global enterprises.">
+    <meta property="og:image" content="https://vineetkr.com/assets/about-og-image.png">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://vineetkr.com/about.html">
+    <meta name="twitter:title" content="About Vineet Kumar - QE Manager & SDET Architect">
+    <meta name="twitter:description"
+        content="Quality engineering leader with deep expertise in automation frameworks, CI/CD, and team leadership.">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -16,7 +42,7 @@
             <span>contactkrvineet@gmail.com</span>
         </div>
         <nav>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#expertise">Technical Expertise</a></li>
@@ -29,11 +55,18 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! I am Vineet Kumar, an SDET Manager with over 16 years of experience driving quality engineering and automation across finance, healthcare, e‑commerce, and enterprise products. I architect and deliver scalable test frameworks, CI/CD-integrated pipelines, and performance and reliability strategies that reduce time-to-market and improve product stability.</p>
+        <p>Hello! I am Vineet Kumar, an SDET Manager with over 16 years of experience driving quality engineering and
+            automation across finance, healthcare, e‑commerce, and enterprise products. I architect and deliver scalable
+            test frameworks, CI/CD-integrated pipelines, and performance and reliability strategies that reduce
+            time-to-market and improve product stability.</p>
 
-        <p>I combine hands-on engineering with people and process leadership: hiring and mentoring teams, defining QA strategy and quality gates, and embedding shift-left practices across the delivery lifecycle. I also apply AI\/ML to testing—building model evaluation suites, synthetic test data pipelines, and observability—to accelerate delivery, detect regressions earlier, and improve decision-making.</p>
+        <p>I combine hands-on engineering with people and process leadership: hiring and mentoring teams, defining QA
+            strategy and quality gates, and embedding shift-left practices across the delivery lifecycle. I also apply
+            AI\/ML to testing—building model evaluation suites, synthetic test data pipelines, and observability—to
+            accelerate delivery, detect regressions earlier, and improve decision-making.</p>
 
-        <p><b>Core strengths:</b> Automation Architecture, Test Data Engineering, Performance Testing, CI/CD optimization, Cloud-Native Testing, AI Model Evaluation and Modern Quality Engineering Practices.</p>
+        <p><b>Core strengths:</b> Automation Architecture, Test Data Engineering, Performance Testing, CI/CD
+            optimization, Cloud-Native Testing, AI Model Evaluation and Modern Quality Engineering Practices.</p>
 
         <p></p>
 
@@ -56,7 +89,8 @@
                     <li>Drive shift-left practices and cross-team alignment with product and infra.</li>
                     <li>Recruit, coach, and develop QA career paths; run postmortems and CI improvements.</li>
                     <li>Design automated AI evaluation suites: prompt/behavioral tests, regression and A/B tests.</li>
-                    <li>Implemented smart test solutions using advanced AI/ML models and modern quality engineering practices to
+                    <li>Implemented smart test solutions using advanced AI/ML models and modern quality engineering
+                        practices to
                         accelerate delivery and elevate product quality.</li>
 
                 </ul>
@@ -71,68 +105,74 @@
         <h2>My Technical Expertise</h2>
         <table>
             <thead>
-            <tr>
-                <th>Category</th>
-                <th>Technologies</th>
-                <th>Relevance</th>
-            </tr>
+                <tr>
+                    <th>Category</th>
+                    <th>Technologies</th>
+                    <th>Relevance</th>
+                </tr>
             </thead>
             <tbody>
-            <tr>
-                <td>Languages</td>
-                <td>Python, Java, JavaScript</td>
-                <td><b>Python:</b> scripting, test tooling and Pytest; <b>Java:</b> Selenium/TestNG frameworks; <b>JavaScript:</b> Playwright/Cypress automation</td>
-            </tr>
-            <tr>
-                <td>Automation Tools</td>
-                <td>Pytest, Selenium, Playwright, Appium, Cucumber, TestNG, JUnit, Rest Assured, Postman, Swagger</td>
-                <td>Web/mobile automation, BDD, API testing, contract validation and Python-native test frameworks</td>
-            </tr>
-            <tr>
-                <td>Performance Tools</td>
-                <td>Gatling, JMeter</td>
-                <td>Load, stress and throughput testing; bottleneck analysis and tuning</td>
-            </tr>
-            <tr>
-                <td>Data & DataStores</td>
-                <td>Snowflake, MongoDB</td>
-                <td>Test data storage, analytics, dataset preparation and masking</td>
-            </tr>
-            <tr>
-                <td>CI/CD & DevOps</td>
-                <td>Jenkins, Git, Docker, Kubernetes</td>
-                <td>Pipeline automation, containerized test runs, environment orchestration</td>
-            </tr>
-            <tr>
-                <td>Build Tools</td>
-                <td>Maven, Gradle, Python Build (pip, setuptools, poetry)</td>
-                <td>Java and Python build/dependency management and CI integration; reproducible Python packaging</td>
-            </tr>
-            <tr>
-                <td>Cloud Platforms</td>
-                <td>AWS, Azure</td>
-                <td>Cloud-based test environments, scaling and cost optimisation</td>
-            </tr>
-            <tr>
-                <td>AI Tools</td>
-                <td>Ollama</td>
-                <td>Local LLM runtime for smart test generation, model evaluation, prompt-driven test oracles and CI evaluation</td>
-            </tr>
-            <tr>
-                <td>Testing Techniques</td>
-                <td>Functional, Regression, Performance, Load, Security</td>
-                <td>Core QA methods used across projects and release gates</td>
-            </tr>
-            <tr>
-                <td>Development Methodologies</td>
-                <td>Agile, Scrum</td>
-                <td>Iterative delivery, sprint-based testing and collaboration</td>
-            </tr>
-            <tr>
-                <td>CRM & Integrations</td>
-                <td>Salesforce</td>
-                <td>CRM workflows, integration and end-to-end testing</td>
-            </tr>
+                <tr>
+                    <td>Languages</td>
+                    <td>Python, Java, JavaScript</td>
+                    <td><b>Python:</b> scripting, test tooling and Pytest; <b>Java:</b> Selenium/TestNG frameworks;
+                        <b>JavaScript:</b> Playwright/Cypress automation
+                    </td>
+                </tr>
+                <tr>
+                    <td>Automation Tools</td>
+                    <td>Pytest, Selenium, Playwright, Appium, Cucumber, TestNG, JUnit, Rest Assured, Postman, Swagger
+                    </td>
+                    <td>Web/mobile automation, BDD, API testing, contract validation and Python-native test frameworks
+                    </td>
+                </tr>
+                <tr>
+                    <td>Performance Tools</td>
+                    <td>Gatling, JMeter</td>
+                    <td>Load, stress and throughput testing; bottleneck analysis and tuning</td>
+                </tr>
+                <tr>
+                    <td>Data & DataStores</td>
+                    <td>Snowflake, MongoDB</td>
+                    <td>Test data storage, analytics, dataset preparation and masking</td>
+                </tr>
+                <tr>
+                    <td>CI/CD & DevOps</td>
+                    <td>Jenkins, Git, Docker, Kubernetes</td>
+                    <td>Pipeline automation, containerized test runs, environment orchestration</td>
+                </tr>
+                <tr>
+                    <td>Build Tools</td>
+                    <td>Maven, Gradle, Python Build (pip, setuptools, poetry)</td>
+                    <td>Java and Python build/dependency management and CI integration; reproducible Python packaging
+                    </td>
+                </tr>
+                <tr>
+                    <td>Cloud Platforms</td>
+                    <td>AWS, Azure</td>
+                    <td>Cloud-based test environments, scaling and cost optimisation</td>
+                </tr>
+                <tr>
+                    <td>AI Tools</td>
+                    <td>Ollama</td>
+                    <td>Local LLM runtime for smart test generation, model evaluation, prompt-driven test oracles and CI
+                        evaluation</td>
+                </tr>
+                <tr>
+                    <td>Testing Techniques</td>
+                    <td>Functional, Regression, Performance, Load, Security</td>
+                    <td>Core QA methods used across projects and release gates</td>
+                </tr>
+                <tr>
+                    <td>Development Methodologies</td>
+                    <td>Agile, Scrum</td>
+                    <td>Iterative delivery, sprint-based testing and collaboration</td>
+                </tr>
+                <tr>
+                    <td>CRM & Integrations</td>
+                    <td>Salesforce</td>
+                    <td>CRM workflows, integration and end-to-end testing</td>
+                </tr>
             </tbody>
         </table>
     </section>
@@ -145,44 +185,44 @@
         <div class="table-wrap">
             <table>
                 <thead>
-                <tr>
-                    <th>Certification</th>
-                    <th>Issuer</th>
-                    <th>Certification No</th>
-                    <th>Year</th>
-                </tr>
+                    <tr>
+                        <th>Certification</th>
+                        <th>Issuer</th>
+                        <th>Certification No</th>
+                        <th>Year</th>
+                    </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td>Python PCEP</td>
-                    <td>Python Institute</td>
-                    <td>vKA3.aXB6.6HcW</td>
-                    <td>2025</td>
-                </tr>
-                <tr>
-                    <td>SAFe6 Product Owner/Manager</td>
-                    <td>SAFE</td>
-                    <td>90458158-9868</td>
-                    <td>2024</td>
-                </tr>
-                <tr>
-                    <td>AWS Certified Cloud Practioner</td>
-                    <td>AWS</td>
-                    <td>D348RLDBG21Q1N5S</td>
-                    <td>2023</td>
-                </tr>
-                <tr>
-                    <td>Microsoft Certified Azure Fundamentals</td>
-                    <td>Microsoft</td>
-                    <td>H960-1697</td>
-                    <td>2023</td>
-                </tr>
-                <tr>
-                    <td>ISTQB</td>
-                    <td>ISTQB</td>
-                    <td></td>
-                    <td>2021</td>
-                </tr>
+                    <tr>
+                        <td>Python PCEP</td>
+                        <td>Python Institute</td>
+                        <td>vKA3.aXB6.6HcW</td>
+                        <td>2025</td>
+                    </tr>
+                    <tr>
+                        <td>SAFe6 Product Owner/Manager</td>
+                        <td>SAFE</td>
+                        <td>90458158-9868</td>
+                        <td>2024</td>
+                    </tr>
+                    <tr>
+                        <td>AWS Certified Cloud Practioner</td>
+                        <td>AWS</td>
+                        <td>D348RLDBG21Q1N5S</td>
+                        <td>2023</td>
+                    </tr>
+                    <tr>
+                        <td>Microsoft Certified Azure Fundamentals</td>
+                        <td>Microsoft</td>
+                        <td>H960-1697</td>
+                        <td>2023</td>
+                    </tr>
+                    <tr>
+                        <td>ISTQB</td>
+                        <td>ISTQB</td>
+                        <td></td>
+                        <td>2021</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
