--- a/contact.html
+++ b/contact.html
@@ -14,15 +14,15 @@
 
         <h1>Vineet Kumar</h1>
         <div class="contact-info">
-            <span><strong>Email: </strong>contactkrvineet@gmail.com</span>
-            <span><strong>|| Cell: </strong> (+1) 437-428-2199</span>
-            <span><strong>|| WhatsApp:</strong> (+1) 991-162-0414</span>
+            <span><strong>Email: </strong><a href="mailto:contactkrvineet@gmail.com" style="color: #ffd700; text-decoration: none;">contactkrvineet@gmail.com</a></span>
+            <span><strong>|| Cell: </strong><a href="tel:+14374282199" style="color: #ffd700; text-decoration: none;">+1 437-428-2199</a></span>
+            <span><strong>|| WhatsApp: </strong><a href="https://wa.me/19911620414" target="_blank" style="color: #ffd700; text-decoration: none;">+1 991-162-0414</a></span>
         </div>
         <nav>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="index.html#projects">Projects</a></li>
                 <li><a href="techExpertise.html">Expertise</a></li>
                 <li><a href="#certifications">Certifications</a></li>
             </ul>
